src/components/_chat.scss
[class|="chatContent"] {
  div[class*="wrapperAudio-"],
  div[class*="imageWrapper-"] {
    div[class*="audioControls"],
    div[class*="videoControls-"] {
      background-color: #{adjust-color($mantle, $alpha: -0.2)};

      svg[class*="controlIcon-"] {
        opacity: 1;
        color: $subtext1;
      }
    }
  }

  // new message ruler
  #---new-messages-bar {
    span[class|="unreadPill"] {
      color: $crust;
    }
  }

  // new message bar
  div[class|="newMessagesBar"] {
    button {
      color: $crust;
    }
  }

  // text input area
  div[class|="channelTextArea"] {
    div[class|="buttons"] * {
      color: var(--interactive-normal) !important;
    }
  }

  // reactions
  [id|="message-reactions"] {
    div[class|="reaction"] {
      background-color: $surface0;
      &:hover {
        background-color: var(--brand-experiment-20a);
        border-color: var(--brand-experiment-30a);
      }
    }
  }
  // Super reactions and beta badge
  div[class*="isBurstReactionPicker-"] {
    box-shadow: 0 0 0 2px $mauve, 0 0 16px $lavender;
  }
  div[class|="navButtonSuperReactActive"],
  div[class|="navButtonSuperReactActive"]:hover {
    background: linear-gradient(270deg, $pink, $lavender 33.63%, $mauve);
    color: $crust;
  }
  div[class*="betaTag-"] {
    background: var(--brand-experiment) !important;
    color: $crust;
  }
  button[class*="navButtonActive-"],
  button[class*="navButtonActive-"]:hover {
    color: $crust;
  }
  div[class*="colorPremiumGradient-"][class*="focused-"] {
    background: linear-gradient(270deg, $pink, $lavender 33.63%, $mauve);
    color: $crust !important;
  }
  div[class*="isBurstReactionPicker"] {
    border: none;
    box-shadow: 0 0 0 2px $mauve, 0 0 16px $lavender;
  }
  // Voice messages play button
  div[class*="playButtonContainer-"] {
    background: var(--brand-experiment) !important;
  }
  svg[class*="playIcon-"] path {
    fill: $crust;
  }

  // chat header
  div[class|="container"][class*="header-"] {
    div[class*="addReactButton-"],
    div[class|="buttons"]:not([class*="lookBlank-"]) div[class|="contents"] {
      background: $surface0;
      &:hover {
        background-color: var(--brand-experiment-20a);
        border-color: var(--brand-experiment-30a);
      }
    }
  }

  // "Messages failed to load" bar
  div[class|="messagesErrorBar"] div[class*="barButtonBase-"] {
    color: $crust;
  }

  // code stuff
  // [class*="after_inlineCode-"],
  // [class*="before_inlineCode-"],
  // [class|="syntaxBefore"],
  // [class|="syntaxAfter"] {
  //   color: $overlay0;
  // }

  [class*="inlineCode-"] {
    background: $surface0;
  }

  code.inline {
    background: $surface0;
  }

  div[class|="container"] div[class|="cardWrapper"] {
    div[class*="completed-"] {
      svg[class|="checkmark"] {
        background-color: $green;
        color: $crust;
      }
    }
  }
}

// arrow when someone joins
div[style*="d1382af8d9e755bc44811b1fd92990a8.svg"] {
  background-image: url("data:image/svg+xml,%3Csvg height='18' width='18' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='none' fill-rule='evenodd'%3E%3Cpath d='m18 0h-18v18h18z'/%3E%3Cpath d='m0 8h14.2l-3.6-3.6 1.4-1.4 6 6-6 6-1.4-1.4 3.6-3.6h-14.2' fill='%23#{str-slice(inspect($green), 2)}'/%3E%3C/g%3E%3C/svg%3E") !important;
  filter: none !important;
}

// server boost icon... again
main[class|="chatContent"] div[id|="message-content"] svg[class|="icon"] {
  > path[d="M4 0L0 4V8L4 12L8 8V4L4 0ZM7 7.59L4 10.59L1 7.59V4.41L4 1.41L7 4.41V7.59Z"],
  > path[d="M2 4.83V7.17L4 9.17L6 7.17V4.83L4 2.83L2 4.83Z"] {
    color: $pink;
  }
}

// spoiler messages
.theme-dark,
.theme-light {
  span[class|="spoilerContent"],
  div[class|="spoilerContent"] {
    background-color: $surface0;

    &[class*="hidden"] {
      background-color: $surface2;

      &:hover {
        background-color: lighten($surface2, 5%);
      }
    }
  }

  div[class|="spoilerContainer"] {
    div[class|="spoilerWarning"] {
      color: $text;
      background-color: adjust-color($crust, $alpha: -0.3);
    }

    &:hover {
      div[class|="spoilerWarning"] {
        color: $text;
        background-color: $crust;
      }
    }

    article[class*="embedFull-"] {
      border-color: $surface2;
    }
  }
}

// cooldown text
div[class|="cooldownWrapper"] {
  color: var(--text-muted) !important;
}

// autocomplete chat textboxes
div[class*="autocomplete-"] {
  background-color: $mantle !important;

  div[class*="categoryHeader"] {
    background-color: $mantle !important;
  }
  div[class*="autocompleteRowSubheading"] {
    background-color: transparent;
  }
  div[class*="autocompleteRowContentSecondary"] {
    background-color: transparent;
  }
  div[class|="usageWrapper"] > div[class*="title-"] {
    color: $brand !important;
  }

  strong {
    color: $brand !important;
  }
}

// emoji button
div[class|="channelTextArea"] button[class*="emojiButton-"] {
  background: transparent !important;
}

// upload???
[class|="uploadDropModal"] {
  &[class*="error"] {
    background-color: $red;
  }

  div[class|="inner"] {
    border-color: $crust;

    * {
      color: $crust !important;
    }
  }
}

// forums
div[class|="chat"] > div[class|="content"] > div[class|="container"] {
  background-color: $base;

  // forum icons
  div[class|="pinIcon"],
  div[class|="stepStatus"] {
    > svg > path {
      fill: $subtext0;
    }

    // .. but turn the checkmarks crust for the steps
    &[style*="background-color: var(--status-positive-background);"]
      > svg
      > path {
      fill: $crust;
    }
  }

  div[class*="countText"] {
    color: $crust;
  }

  // discord icon
  svg[class|="discordIcon"] {
    background-color: $brand;
    color: $crust;
  }

  // new badge
  div[class|="newBadge"] {
    background-color: $lavender !important;
    color: $crust;
  }

  div[class*="mainCard-"] {
    background-color: $surface0;
  }
}

div[class|="sidebar"] > section[class|="panels"] {
  svg[class*="buttonIcon-"],
  div[class*="buttonContents"] {
    fill: $text;
    color: $text;
  }
}

[data-list-id|="forum-channel-list"] {
  div[class|="body"] > div[class|="tags"] div[class*="pill"] {
    background-color: $mantle;
  }

  // new post button
  button[class|="submitButton"][class*="colorBrand"] {
    background-color: $brand;
    color: $crust;
  }
}

// Bot slash command field
div[class|="applicationCommand"] {
  span[class*="selectedPill-"] {
    border-color: $brand !important;
  }

  span[class*="erroredPill-"] {
    border-color: $red !important;
  }
}

// fix the sidebar on smaller servers
div[class|="chat"]
  > div[class|="content"]
  main[class|="chatContent"]
  + div[class|="container"] {
  background-color: var(--background-secondary);
}

// fix error border when attempting to start a thread with no message
[class*="channelTextAreaInnerError-"] {
  border: 1px solid $red !important;
}

// Jump to Present bar text
[class*="barButtonBase-"] {
  color: $crust !important;
}

// calls
div[class|="callContainer"] {
  [class*="controlIcon-"] {
    color: $subtext1;

    &:hover {
      color: $text;
    }
  }

  div[class*="tile-"],
  div[class*="background-"] {
    background-color: $base !important;
  }

  div[class*="overlayTitle"],
  svg[class*="status-"] {
    background-color: $surface0;
    color: $text;
  }

  div[class*="header"],
  svg[class*="selectedIcon-"] {
    color: $text;
  }

  div[class*="button-"][class*="contents-"],
  button[class*="cta-"],
  button[class*="participantsButton-"] {
    background-color: $surface0;
    color: $text;
  }

  // call quality and nitro indicator
  div[class|="indicators"] {
    div[class|="liveQualityIndicator"] {
      background-color: $red !important;

      svg[class|="premiumStreamIcon"] {
        color: $crust;
      }
    }
  }

  div[class|="videoControls"] {
    div[class|="children"] {
      div[class*="playingText-"] {
        color: $subtext1;
      }
    }

    div[class|="toolbar"] {
      svg[class|="controlIcon"] {
        color: var(--interactive-normal);
      }

      div[class|="streamQualityIndicator"] div[class|="liveQualityIndicator"] {
        background-color: $surface1 !important;

        div[class|="qualityIndicator"] {
          color: $text;
        }

        svg[class|="premiumStreamIcon"] {
          color: $text;
        }
      }

      div[class|="liveIndicator"] div[class|="live"] {
        background-color: $red !important;
        color: $crust !important;
      }
    }

    button[class*="leftTrayIcon-"][class*="buttonColor-"] {
      background-color: $surface0;
      color: $text;
    }

    [class*="colorable-"] {
      &[class*="red-"] {
        background: $red;

        [class*="centerIcon-"] {
          color: $crust;
        }
      }

      &[class*="primaryDark-"] {
        background: $surface1;
        color: $text;

        [class*="centerIcon-"] {
          color: $text;
        }
      }

      &[class*="white-"] {
        color: $crust;
        background-color: $subtext1;

        [class*="centerIcon-"] {
          color: $crust;
        }

        &:hover,
        &[class*="active-"] {
          background: $text;
        }
      }
    }
  }
}

// gifts
div[class*="giftCodeContainer"] [class*="tile"] {
  background-color: $mantle;

  > [class*="description"] {
    color: $text;
  }
}

// channels & roles
div[class*="chat-"] {
  // header
  section[class*="header-"] {
    background-color: $mantle;
  }

  div[class*="content-"][class*="container-"] {
    background-color: $mantle;

    div[class*="container"] {
      background-color: $mantle;
    }

    div[class*="search-"] {
      background-color: $base !important;

      input::placeholder {
        color: $overlay0;
      }
    }

    div[class*="browser"] {
      div[class*="content"] div[class|="container"] {
        background-color: $base;
      }
    }

    div[class*="scrollerContainer-"] {
      background-color: $mantle;

      div[class*="checkIcon-"][style*="opacity: 1;"] > svg > path {
        fill: $crust;
      }
    }

    div[role="tablist"] {
      background-color: $mantle;
      border-bottom: 2px solid $surface0;

      [class*="textBadge-"] {
        color: $crust;
      }
    }
  }
}

div[class*="chat-"] {
  // Search Box
  section[class*="title"] div[class*="searchBar"] span[class*="search"] {
    background-color: $surface0;
    color: $text;
  }

  // Search Results Active Button
  nav[class*="pageControl"]
    div[class*="roundButton"][class*="activeButton"]
    span {
    color: $crust;
  }
}

div[class*="chat-"] {
  // Forum Gallery View
  li[class*="mainCard-"][class*="container"] {
    background-color: $surface0;

    &:hover {
      background-color: $surface1;
    }

    div[class*="contentPreview-"] {
      background-color: $base;
      border: none;

      div[class*="textContentFooter-"] {
        background: none;
      }
    }

    div[class*="tags-"] {
      div[class*="tagPill-"] {
        background-color: #{adjust-color($surface1, $alpha: -0.2)};
      }
    }
  }

  // Empty Pages
  div[class*="emptyPage"] {
    background-color: $base;
  }

  // Stupid gradient
  div[class*="innerHeader"]:after {
    background: none;
  }
}

// spotify listen along invite
[id*="message-accessories-"] > [class*="invite-"] {
  background-color: $base;
  [class*="inFront-"][class*="header-"] {
    color: $subtext0;
  }
  [class*="partyStatus-"] {
    color: $text;
  }
}

// typing indicator
[class|="avatar"] [class|="dots"] {
  color: $base;
}

// Vencord's deleted message plugin
.messagelogger-deleted div {
  color: $red !important;
}
.messagelogger-deleted div a {
  color: #{darken($red, 5%)} !important;
}

